# x265

./: .gitignore  Status.md  metadata.json  readme.md  x265.profdata
.github/: dependabot.yml  deps-cache.json
.github/actions/build-x265-profiling/: action.yml
.github/actions/setup-windows-deps/: action.yml
.github/patches/: gop-muxer-lsmash-add-box.patch  l-smash-clang-coff-refptr.patch
.github/scripts/: check_ci_guards.py  check_ci_guards_checks.py  check_ci_guards_data.py  check_ci_guards_helpers.py  check_cmake_cxx20_contract.py  check_compile_commands.py  check_dependency_patch_suffixes.py  check_pgo_consume_chain.py  check_profdata_metadata.py  check_release_needs.py  check_source_test_vectors.py  cxx20_scan_helpers.sh  mp4_smoke_helpers.sh  mp4_smoke_suite.sh  profiling_smoke_package_verify.sh  runtime_smoke_suite.sh  test_check_ci_guards.py  test_check_ci_guards_fixture.py  test_check_cmake_cxx20_contract.py  test_check_compile_commands.py  test_check_dependency_patch_suffixes.py  test_check_pgo_consume_chain.py  test_check_source_test_vectors.py  verify_ci_archive.sh
.github/workflows/: build-pgo.yml  build-profiling.yml  build.yml  update-deps.yml
doc/: requirements.txt
doc/reST/: api.rst  cli.rst
profiles/: 0.profdata  1.profdata  2.profdata  3.profdata
source/: CMakeLists.txt  abrEncApp.cpp  abrEncApp.h  x265.cpp  x265.h  x265_config.h.in  x265cli.cpp  x265cli.h
source/cmake/: FindFF.cmake  FindLSMASH.cmake  Findsvthevc.cmake  Version.cmake  YuukiVersion.cmake
source/common/: CMakeLists.txt  bitstream.cpp  bitstream.h  common.cpp  common.h  cpu.cpp  cudata.cpp  cudata.h  dct.cpp  deblock.cpp  frame.cpp  frame.h  framedata.cpp  framedata.h  ipfilter.cpp  lowpassdct.cpp  lowres.cpp  lowres.h  md5.cpp  param.cpp  piclist.h  picyuv.cpp  pixel.cpp  predict.cpp  primitives.cpp  primitives.h  quant.cpp  ringmem.cpp  ringmem.h  scaler.cpp  scaler.h  scalinglist.cpp  shortyuv.cpp  slice.cpp  slice.h  temporalfilter.cpp  threading.h  threadpool.cpp  threadpool.h  version.cpp  (+4 more)
source/common/riscv64/: filter-prim.h
source/compat/getopt/: getopt.c
source/dynamicHDR10/: CMakeLists.txt  JsonHelper.cpp  JsonHelper.h  metadataFromJson.cpp  metadataFromJson.h
source/dynamicHDR10/json11/: json11.cpp  json11.h
source/encoder/: CMakeLists.txt  analysis.cpp  api.cpp  bitcost.cpp  bitcost.h  dpb.cpp  encoder.cpp  encoder.h  entropy.cpp  frameencoder.cpp  frameencoder.h  framefilter.cpp  framefilter.h  level.cpp  motion.cpp  nal.cpp  ratecontrol.cpp  ratecontrol.h  rdcost.h  reference.cpp  sao.cpp  search.cpp  search.h  sei.h  slicetype.cpp  slicetype.h  svt.h  threadedme.cpp  threadedme.h  weightPrediction.cpp
source/filters/: filters.cpp  filters.h  zimgfilter.cpp  zimgfilter.h
source/input/: avs.cpp  avs.h  input.cpp  input.h  lavf.cpp  lavf.h  vpy.cpp  vpy.h  y4m.cpp  y4m.h  yuv.cpp  yuv.h
source/output/: containerMuxer.h  gop.cpp  gop.h  matroska_ebml.cpp  mkv.cpp  mkv.h  mp4.cpp  mp4.h  output.cpp  raw.cpp  reconplay.cpp  reconplay.h  y4m.cpp  y4m.h  yuv.cpp  yuv.h
source/profile/: CMakeLists.txt
source/profile/PPA/: CMakeLists.txt  ppa.cpp
source/profile/vtune/: CMakeLists.txt  vtune.cpp
source/test/: CMakeLists.txt  intrapredharness.cpp  intrapredharness.h  ipfilterharness.cpp  ipfilterharness.h  mbdstharness.cpp  mbdstharness.h  pixelharness.cpp  pixelharness.h  rate-control-tests.txt  regression-tests.txt  testbench.cpp  testharness.h
