# vim: syntax=cmake
cmake_minimum_required (VERSION 4.0) # CMake 4.x for modern features and policies

if(NOT CMAKE_BUILD_TYPE)
    # default to Release build for GCC builds
    set(CMAKE_BUILD_TYPE Release CACHE STRING
        "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel."
        FORCE)
endif()
message(STATUS "cmake version ${CMAKE_VERSION}")

# CMake 4.0: CMP0042 NEW is now the default behavior for MACOSX_RPATH
# Note: CMP0025 and CMP0054 OLD behaviors have been removed in CMake 4.0
# - CMP0025: AppleClang is now reported as "AppleClang" (use MATCHES for compatibility)
# - CMP0054: if() arguments are now properly quoted (safer logic)

project(x265 LANGUAGES CXX)
include(CheckIncludeFiles)
include(CheckFunctionExists)
include(CheckSymbolExists)
include(CheckCXXCompilerFlag)
include(CheckCSourceCompiles)
include(CheckCXXSourceCompiles)

# C++17 standard settings
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)  # Use GNU extensions (gnu++17) for compatibility

# ============================================================================
# Modern CMake: Collect compile definitions and options in variables
# These will be applied to targets using target_compile_definitions/options
# ============================================================================
set(X265_COMPILE_DEFINITIONS "")    # Preprocessor definitions (-D...)
set(X265_COMPILE_OPTIONS "")        # Compiler flags (-Wall, -O3, etc.)

# Helper macros to collect definitions and options
macro(x265_add_definition def)
    list(APPEND X265_COMPILE_DEFINITIONS ${def})
endmacro()

macro(x265_add_option opt)
    list(APPEND X265_COMPILE_OPTIONS ${opt})
endmacro()

macro(x265_add_definitions)
    foreach(arg ${ARGN})
        # Check if it's a definition (-D...) or an option
        string(FIND "${arg}" "-D" def_pos)
        if(def_pos EQUAL 0)
            # It's a preprocessor definition, remove -D prefix for modern CMake
            string(SUBSTRING "${arg}" 2 -1 def_name)
            list(APPEND X265_COMPILE_DEFINITIONS "${def_name}")
        else()
            # It's a compiler option
            list(APPEND X265_COMPILE_OPTIONS "${arg}")
        endif()
    endforeach()
endmacro()

# Include directories collection
set(X265_INCLUDE_DIRS "")  # Collect include directories
set(X265_LINK_DIRS "")     # Collect link directories

macro(x265_add_include_dir)
    list(APPEND X265_INCLUDE_DIRS ${ARGN})
endmacro()

option(FPROFILE_GENERATE "Compile executable to generate usage data" OFF)
option(FPROFILE_USE "Compile executable using generated usage data" OFF)
option(NATIVE_BUILD "Target the build CPU" OFF)
option(STATIC_LINK_CRT "Statically link C and C++ runtimes for release builds" OFF)
option(USE_MIMALLOC "Use mimalloc as allocator" OFF)
option(USE_LTO "Enable link time optimization" OFF)

# ============================================================================
# CMake 4.x New Features
# ============================================================================
option(ENABLE_UNITY_BUILD "Enable unity build for faster compilation" OFF)
if(ENABLE_UNITY_BUILD)
    set(CMAKE_UNITY_BUILD ON)
    set(CMAKE_UNITY_BUILD_RELOCATABLE ON CACHE BOOL "Use relative paths in unity build" FORCE)
    message(STATUS "Unity build enabled for faster compilation")
endif()

option(LINK_WARNING_AS_ERROR "Treat linker warnings as errors" OFF)
if(LINK_WARNING_AS_ERROR)
    set(CMAKE_LINK_WARNING_AS_ERROR ON CACHE BOOL "Treat linker warnings as errors" FORCE)
    message(STATUS "Linker warnings will be treated as errors")
endif()

mark_as_advanced(FPROFILE_USE FPROFILE_GENERATE NATIVE_BUILD)

if(NATIVE_BUILD)
    set(TARGET_CPU native CACHE STRING "The target CPU")
else()
    set(TARGET_CPU generic CACHE STRING "The target CPU")
endif()

# X265_BUILD must be incremented each time the public API is changed
set(X265_BUILD 215)
configure_file("${PROJECT_SOURCE_DIR}/x265.def.in"
               "${PROJECT_BINARY_DIR}/x265.def")
configure_file("${PROJECT_SOURCE_DIR}/x265_config.h.in"
               "${PROJECT_BINARY_DIR}/x265_config.h")

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")

# Add option to specify lsmash source directory
option(SPECIFY_LSMASH_SOURCE_DIR "Specify the source directory of L-SMASH" OFF)
if(SPECIFY_LSMASH_SOURCE_DIR)
    set(LSMASH_SOURCE_DIR lsmash CACHE STRING "The source directory of L-SMASH")
    list(APPEND X265_INCLUDE_DIRS "${LSMASH_SOURCE_DIR}")
endif()

# System architecture detection
if (APPLE AND CMAKE_OSX_ARCHITECTURES)
    string(TOLOWER "${CMAKE_OSX_ARCHITECTURES}" SYSPROC)
else()
    string(TOLOWER "${CMAKE_SYSTEM_PROCESSOR}" SYSPROC)
endif()
set(X86_ALIASES x86 i386 i686 x86_64 amd64)
set(ARM_ALIASES armv6l armv7l)
set(ARM64_ALIASES arm64 arm64e aarch64)
list(FIND X86_ALIASES "${SYSPROC}" X86MATCH)
list(FIND ARM_ALIASES "${SYSPROC}" ARMMATCH)
list(FIND ARM64_ALIASES "${SYSPROC}" ARM64MATCH)
set(POWER_ALIASES powerpc64 powerpc64le ppc64 ppc64le)
list(FIND POWER_ALIASES "${SYSPROC}" POWERMATCH)
if(X86MATCH GREATER "-1")
    set(X86 1)
    x265_add_definitions(-DX265_ARCH_X86=1)
    if(CMAKE_CXX_FLAGS STREQUAL "-m32")
        message(STATUS "Detected x86 target processor")
    elseif("${CMAKE_SIZEOF_VOID_P}" MATCHES 8)
        set(X64 1)
        x265_add_definitions(-DX86_64=1)
        message(STATUS "Detected x86_64 target processor")
    endif()
elseif(POWERMATCH GREATER "-1")
    message(STATUS "Detected POWER target processor")
    set(POWER 1)
    x265_add_definitions(-DX265_ARCH_POWER=1)
    if("${CMAKE_SIZEOF_VOID_P}" MATCHES 8)
        set(PPC64 1)
        x265_add_definitions(-DPPC64=1)
        message(STATUS "Detected POWER PPC64 target processor")
    endif()
elseif(ARMMATCH GREATER "-1")
    if(CROSS_COMPILE_ARM)
        message(STATUS "Cross compiling for ARM arch")
    else()
        set(CROSS_COMPILE_ARM 0)
    endif()
	message(STATUS "Detected ARM target processor")
    set(ARM 1)
    x265_add_definitions(-DX265_ARCH_ARM=1 -DHAVE_ARMV6=1)
elseif(ARM64MATCH GREATER "-1")
    message(STATUS "Detected ARM64 target processor")
    set(ARM64 1)

    option(AARCH64_WARNINGS_AS_ERRORS "Build with -Werror for AArch64 Intrinsics files" OFF)

    option(AARCH64_RUNTIME_CPU_DETECT "Enable AArch64 run-time CPU feature detection" ON)
    if(NOT CMAKE_SYSTEM_NAME MATCHES "Linux|Darwin|Windows")
        set(AARCH64_RUNTIME_CPU_DETECT OFF CACHE BOOL "" FORCE)
        message(STATUS "Run-time CPU feature detection unsupported on this platform")
    endif()

    # Options for manually enabling/disabling AArch64 SIMD extensions.
    option(ENABLE_NEON "Enable Neon" ON)
    option(ENABLE_NEON_DOTPROD "Enable Neon DotProd" ON)
    option(ENABLE_NEON_I8MM "Enable Neon I8MM" ON)
    option(ENABLE_SVE "Enable SVE" ON)
    option(ENABLE_SVE2 "Enable SVE2" ON)

    # Compiler flags for AArch64 extensions.
    set(AARCH64_NEON_FLAG "-march=armv8-a")
    # Neon DotProd is mandatory from Armv8.4.
    set(AARCH64_NEON_DOTPROD_FLAG "-march=armv8.2-a+dotprod")
    # Neon I8MM is mandatory from Armv8.6.
    set(AARCH64_NEON_I8MM_FLAG "-march=armv8.2-a+dotprod+i8mm")
    set(AARCH64_SVE_FLAG "-march=armv8.2-a+dotprod+i8mm+sve")
    # SVE2 is only available from Armv9.0, and armv9-a implies +dotprod and +sve.
    set(AARCH64_SVE2_FLAG "-march=armv9-a+i8mm+sve2")
else()
    message(STATUS "CMAKE_SYSTEM_PROCESSOR value `${CMAKE_SYSTEM_PROCESSOR}` is unknown")
    message(STATUS "Please add this value near ${CMAKE_CURRENT_LIST_FILE}:${CMAKE_CURRENT_LIST_LINE}")
endif()

if(UNIX)
    list(APPEND PLATFORM_LIBS pthread)
    find_library(LIBRT rt)
    if(LIBRT)
        list(APPEND PLATFORM_LIBS rt)
    endif()
    mark_as_advanced(LIBRT)
    find_library(LIBDL dl)
    if(LIBDL)
        list(APPEND PLATFORM_LIBS dl)
    endif()
    option(ENABLE_LIBNUMA "Enable libnuma usage (Linux only)" ON)
    if(ENABLE_LIBNUMA)
        find_package(Numa)
        if(NUMA_FOUND)
            list(APPEND X265_LINK_DIRS "${NUMA_LIBRARY_DIR}")
            list(APPEND CMAKE_REQUIRED_LIBRARIES numa)
            list(APPEND CMAKE_REQUIRED_INCLUDES ${NUMA_INCLUDE_DIR})
            list(APPEND CMAKE_REQUIRED_LINK_OPTIONS "-L${NUMA_LIBRARY_DIR}")
            check_symbol_exists(numa_node_of_cpu numa.h NUMA_V2)
            if(NUMA_V2)
                x265_add_definitions(-DHAVE_LIBNUMA)
                message(STATUS "libnuma found, building with support for NUMA nodes")
                list(APPEND PLATFORM_LIBS numa)
                list(APPEND X265_INCLUDE_DIRS "${NUMA_INCLUDE_DIR}")
            endif()
        endif()
        mark_as_advanced(NUMA_FOUND)
    endif(ENABLE_LIBNUMA)
    option(NO_ATOMICS "Use a slow mutex to replace atomics" OFF)
    if(NO_ATOMICS)
        x265_add_definitions(-DNO_ATOMICS=1)
    endif(NO_ATOMICS)
    find_library(VMAF vmaf)
    option(ENABLE_LIBVMAF "Enable VMAF" OFF)
    if(ENABLE_LIBVMAF)
        x265_add_definitions(-DENABLE_LIBVMAF)
    endif()
endif(UNIX)

if((X64 AND NOT WIN32) OR ARM64)
    option(ENABLE_PIC "Enable Position Independent Code" ON)
else()
    option(ENABLE_PIC "Enable Position Independent Code" OFF)
endif()

# Compiler detection (Modern CMake style)
if(CMAKE_GENERATOR STREQUAL "Xcode")
  set(XCODE 1)
endif()
if(APPLE)
  x265_add_definitions(-DMACOS=1)
endif()

# Use MATCHES for better compatibility with compiler variants (e.g., AppleClang)
if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    set(CLANG 1)
endif()
if(CMAKE_CXX_COMPILER_ID MATCHES "Intel")
    set(INTEL_CXX 1)
endif()
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    set(GCC 1)
endif()

if(INTEL_CXX AND WIN32)
    # treat icl roughly like MSVC
    set(MSVC 1)
endif()
if(MSVC)
    if(STATIC_LINK_CRT)
        set(CompilerFlags CMAKE_CXX_FLAGS_RELEASE CMAKE_C_FLAGS_RELEASE)
        foreach(CompilerFlag ${CompilerFlags})
            string(REPLACE "/MD" "/MT" ${CompilerFlag} "${${CompilerFlag}}")
        endforeach()
    endif(STATIC_LINK_CRT)
    x265_add_definitions(/W4)  # Full warnings
    x265_add_definitions(/Ob2) # always inline
    x265_add_definitions(/MP)  # multithreaded build

    # disable Microsofts suggestions for proprietary secure APIs
    x265_add_definitions(/D_CRT_SECURE_NO_WARNINGS)

    check_include_files(stdint.h HAVE_STDINT_H)
    if(NOT HAVE_STDINT_H)
        list(APPEND X265_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/compat/msvc")
    endif()
endif(MSVC)

check_include_files(inttypes.h HAVE_INT_TYPES_H)
if(HAVE_INT_TYPES_H)
    x265_add_definitions(-DHAVE_INT_TYPES_H=1)
endif()

if(INTEL_CXX AND UNIX)
    set(GCC 1) # treat icpc roughly like gcc
elseif(CLANG)
    set(GCC 1) # treat clang roughly like gcc
elseif(CMAKE_COMPILER_IS_GNUCXX)
    set(GCC 1)
endif()

if(CC STREQUAL "xlc")
    message(STATUS "Use XLC compiler")
    set(XLC 1)
    set(GCC 0)
    #set(CMAKE_C_COMPILER "/usr/bin/xlc")
    #set(CMAKE_CXX_COMPILER "/usr/bin/xlc++")
    x265_add_definitions(-D__XLC__=1)
    x265_add_definitions(-O3 -qstrict -qhot -qaltivec)
    x265_add_definitions(-qinline=level=10 -qpath=IL:/data/video_files/latest.tpo/)
endif()
# this option is to enable the inclusion of dynamic HDR10 library to the libx265 compilation
option(ENABLE_HDR10_PLUS "Enable dynamic HDR10 compilation" OFF)
option(ENABLE_AVISYNTH "Enable AviSynth input" ON)
option(ENABLE_VPYSYNTH "Enable VapourSynth input" ON)
if(MSVC AND (MSVC_VERSION LESS 1800) AND ENABLE_HDR10_PLUS)
    message(FATAL_ERROR "MSVC version 12.0 or above required to support hdr10plus")
endif()
if(WIN32 AND (MSVC_VERSION GREATER 1800))
    if(CMAKE_VERSION VERSION_LESS 3.7)
        message(FATAL_ERROR "cmake version not compatible for VS 2017. Update the cmake to versions 3.7 or above")
    endif()
endif()
if(GCC)
    x265_add_definitions(-Wall -Wextra -Wshadow)
    x265_add_definitions(-D__STDC_LIMIT_MACROS=1)
    if(NOT INTEL_CXX AND NOT CLANG AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 8.0)
        x265_add_definitions(-Wno-class-memaccess)
    endif()
    # Check GCC version for HDR10+ and AviSynth support (requires C++11+ features)
    if(ENABLE_HDR10_PLUS AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS "4.8")
        message(FATAL_ERROR "gcc version above 4.8 required to support hdr10plus")
    endif()
    if(ENABLE_AVISYNTH AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS "4.8")
        message(FATAL_ERROR "gcc version above 4.8 required to support AviSynth")
    endif()
    if(ENABLE_PIC)
         x265_add_definitions(-fPIC)
    endif(ENABLE_PIC)
    x265_add_definitions(-march=${TARGET_CPU})
    if(ARM AND CROSS_COMPILE_ARM)
        message(STATUS "cross compile arm")
		set(ARM_ARGS -march=armv6 -mfloat-abi=soft -mfpu=vfp -marm -fPIC)
    elseif(ARM)
        find_package(Neon)
        if(CPU_HAS_NEON)
            set(ARM_ARGS -mcpu=native -mfloat-abi=hard -mfpu=neon -marm -fPIC)
            x265_add_definitions(-DHAVE_NEON)
        else()
            set(ARM_ARGS -mcpu=native -mfloat-abi=hard -mfpu=vfp -marm)
        endif()
    endif()
    if(ARM64)
        set(CPU_HAS_NEON 1)
        x265_add_definitions(-DX265_ARCH_ARM64=1)

        if (AARCH64_RUNTIME_CPU_DETECT)
            x265_add_definitions(-DAARCH64_RUNTIME_CPU_DETECT=1)
            message(STATUS "Configuring build for run-time CPU feature detection")
        endif()

        if(AARCH64_RUNTIME_CPU_DETECT OR CROSS_COMPILE_ARM64)
            # Add all extensions when compiling for run-time CPU feature detection or cross compiling.
            set(CPU_HAS_NEON_DOTPROD 1)
            set(CPU_HAS_NEON_I8MM 1)
            set(CPU_HAS_SVE 1)
            set(CPU_HAS_SVE2 1)
        else()
            if(CMAKE_SYSTEM_NAME MATCHES "Linux|Darwin")
                find_package(NEON_DOTPROD)
                find_package(NEON_I8MM)
                find_package(SVE)
                find_package(SVE2)
            else()
                message(STATUS "Compile-time CPU feature detection unsupported on this platform")
            endif()
        endif()

        if(ENABLE_SVE OR ENABLE_SVE2)
            set(OLD_CMAKE_REQUIRED_FLAGS ${CMAKE_REQUIRED_FLAGS})
            string(APPEND CMAKE_REQUIRED_FLAGS " ${AARCH64_SVE_FLAG}")
            set(OLD_CMAKE_TRY_COMPILE_TARGET_TYPE ${CMAKE_TRY_COMPILE_TARGET_TYPE})
            set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)

            # Check whether the compiler can compile SVE functions that require
            # backup/restore of SVE registers according to AAPCS.
            # https://github.com/llvm/llvm-project/issues/80009.
            set(SVE_COMPILATION_TEST "
#include <arm_sve.h>
void other();
svfloat32_t func(svfloat32_t a) {
  other();
  return a;
}
int main() { return 0; }")

            check_c_source_compiles("${SVE_COMPILATION_TEST}" SVE_COMPILATION_C_TEST_COMPILED)
            check_cxx_source_compiles("${SVE_COMPILATION_TEST}" SVE_COMPILATION_CXX_TEST_COMPILED)

            # Check if arm_neon_sve_bridge.h is available.
            set(SVE_HEADER_TEST "
#ifndef __ARM_NEON_SVE_BRIDGE
#error 1
#endif
#include <arm_sve.h>
#include <arm_neon_sve_bridge.h>
int main() { return 0; }")
            check_c_source_compiles("${SVE_HEADER_TEST}" SVE_HEADER_C_TEST_COMPILED)
            check_cxx_source_compiles("${SVE_HEADER_TEST}" SVE_HEADER_CXX_TEST_COMPILED)

            set(CMAKE_REQUIRED_FLAGS ${OLD_CMAKE_REQUIRED_FLAGS})
            set(CMAKE_TRY_COMPILE_TARGET_TYPE ${OLD_CMAKE_TRY_COMPILE_TARGET_TYPE})
            if (SVE_COMPILATION_C_TEST_COMPILED AND SVE_COMPILATION_CXX_TEST_COMPILED)
                if (SVE_HEADER_C_TEST_COMPILED AND SVE_HEADER_CXX_TEST_COMPILED)
                    x265_add_definitions(-DHAVE_SVE_BRIDGE=1)
                    set(HAVE_SVE_BRIDGE 1)
                endif()
            else()
                set(ENABLE_SVE OFF CACHE BOOL "" FORCE)
                set(ENABLE_SVE2 OFF CACHE BOOL "" FORCE)
                message(STATUS "Disabling SVE and SVE2")
            endif()
        endif()

        # Impose constraint that disabling one extension disables all 'higher order' ones.
        if(NOT ENABLE_NEON)
            message(STATUS "Disabling Neon")
            set(CPU_HAS_NEON 0)
            set(ENABLE_NEON_DOTPROD 0)
        endif()
        if(NOT ENABLE_NEON_DOTPROD)
            message(STATUS "Disabling Neon DotProd")
            set(CPU_HAS_NEON_DOTPROD 0)
            set(ENABLE_NEON_I8MM 0)
        endif()
        if(NOT ENABLE_NEON_I8MM)
            message(STATUS "Disabling Neon I8MM")
            set(CPU_HAS_NEON_I8MM 0)
            set(ENABLE_SVE 0)
        endif()
        if(NOT ENABLE_SVE)
            message(STATUS "Disabling SVE")
            set(CPU_HAS_SVE 0)
            set(ENABLE_SVE2 0)
        endif()
        if(NOT ENABLE_SVE2)
            message(STATUS "Disabling SVE2")
            set(CPU_HAS_SVE2 0)
        endif()

        if(CPU_HAS_NEON)
            message(STATUS "Found Neon")
            x265_add_definitions(-DHAVE_NEON=1)
        endif()
        if(CPU_HAS_NEON_DOTPROD)
            message(STATUS "Found Neon DotProd")
            x265_add_definitions(-DHAVE_NEON_DOTPROD=1)
        endif()
        if(CPU_HAS_NEON_I8MM)
            message(STATUS "Found Neon I8MM")
            x265_add_definitions(-DHAVE_NEON_I8MM=1)
        endif()
        if(CPU_HAS_SVE)
            message(STATUS "Found SVE")
            x265_add_definitions(-DHAVE_SVE=1)
        endif()
        if(CPU_HAS_SVE2)
            message(STATUS "Found SVE2")
            x265_add_definitions(-DHAVE_SVE2=1)
        endif()
        set(ARM_ARGS -O3)
        # Do not allow implicit vector type conversions in Clang builds (this
        # is already the default in GCC builds).
        check_cxx_compiler_flag(-flax-vector-conversions=none CC_HAS_FLAX_VEC_CONV_NONE)
        if(CC_HAS_FLAX_VEC_CONV_NONE)
            set(ARM_ARGS ${ARM_ARGS} -flax-vector-conversions=none)
        endif()
    endif()
    if(ENABLE_PIC)
        list(APPEND ARM_ARGS -DPIC -fPIC)
    endif()
    x265_add_definitions(${ARM_ARGS})
    if(FPROFILE_GENERATE)
        if(INTEL_CXX)
            x265_add_definitions(-prof-gen -prof-dir="${CMAKE_CURRENT_BINARY_DIR}")
            list(APPEND LINKER_OPTIONS "-prof-gen")
        else()
            check_cxx_compiler_flag(-fprofile-generate CC_HAS_PROFILE_GENERATE)
            if(CC_HAS_PROFILE_GENERATE)
                x265_add_definitions(-fprofile-generate)
                list(APPEND LINKER_OPTIONS "-fprofile-generate")
            endif(CC_HAS_PROFILE_GENERATE)
        endif(INTEL_CXX)
    endif(FPROFILE_GENERATE)
    if(FPROFILE_USE)
        if(INTEL_CXX)
            x265_add_definitions(-prof-use -prof-dir="${CMAKE_CURRENT_BINARY_DIR}")
            list(APPEND LINKER_OPTIONS "-prof-use")
        else()
            check_cxx_compiler_flag(-fprofile-use CC_HAS_PROFILE_USE)
            check_cxx_compiler_flag(-fprofile-correction CC_HAS_PROFILE_CORRECTION)
            check_cxx_compiler_flag(-Wno-error=coverage-mismatch CC_HAS_COVMISMATCH)
            if(CC_HAS_PROFILE_USE)
                x265_add_definitions(-fprofile-use)
                list(APPEND LINKER_OPTIONS "-fprofile-use")
            endif(CC_HAS_PROFILE_USE)
            if(CC_HAS_PROFILE_CORRECTION)
                # auto-correct corrupted counters (happens a lot with x265)
                x265_add_definitions(-fprofile-correction)
            endif(CC_HAS_PROFILE_CORRECTION)
            if(CC_HAS_COVMISMATCH)
                # ignore coverage mismatches (also happens a lot)
                x265_add_definitions(-Wno-error=coverage-mismatch)
            endif(CC_HAS_COVMISMATCH)
        endif(INTEL_CXX)
    endif(FPROFILE_USE)
    if(STATIC_LINK_CRT)
        x265_add_definitions(-static)
        list(APPEND LINKER_OPTIONS "-static-libgcc -static-libstdc++")
    endif(STATIC_LINK_CRT)
    check_cxx_compiler_flag(-Wno-strict-overflow CC_HAS_NO_STRICT_OVERFLOW)
    check_cxx_compiler_flag(-Wno-narrowing CC_HAS_NO_NARROWING)
    check_cxx_compiler_flag(-Wno-array-bounds CC_HAS_NO_ARRAY_BOUNDS)
    if (CC_HAS_NO_ARRAY_BOUNDS)
        x265_add_definitions(-Wno-array-bounds) # these are unhelpful
    endif()
    check_cxx_compiler_flag(-ffast-math CC_HAS_FAST_MATH)
    if (CC_HAS_FAST_MATH)
        x265_add_definitions(-ffast-math)
    endif()
    if (NOT (ARM64 OR CROSS_COMPILE_ARM64))
        check_cxx_compiler_flag(-mstackrealign CC_HAS_STACK_REALIGN)
        if (CC_HAS_STACK_REALIGN)
            x265_add_definitions(-mstackrealign)
        endif()
    endif()
    # Disable exceptions. Reduce executable size, increase compability.
    check_cxx_compiler_flag(-fno-exceptions CC_HAS_FNO_EXCEPTIONS_FLAG)
    if(CC_HAS_FNO_EXCEPTIONS_FLAG)
        x265_add_definitions(-fno-exceptions)
    endif()
    set(FSANITIZE "" CACHE STRING "-fsanitize options for GCC/clang")
    if(FSANITIZE)
        x265_add_definitions(-fsanitize=${FSANITIZE})
        # clang and gcc need the sanitize options to be passed at link
        # time so the appropriate ASAN/TSAN runtime libraries can be
        # linked.
        list(APPEND LINKER_OPTIONS "-fsanitize=${FSANITIZE}")
    endif()
    option(ENABLE_AGGRESSIVE_CHECKS "Enable stack protection and -ftrapv" OFF)
    if(ENABLE_AGGRESSIVE_CHECKS)
        # use with care, -ftrapv can cause testbench SIGILL exceptions
        # since it is testing corner cases of signed integer math
        x265_add_definitions(-DUSING_FTRAPV=1)
        check_cxx_compiler_flag(-fsanitize=undefined-trap CC_HAS_CATCH_UNDEFINED) # clang
        check_cxx_compiler_flag(-ftrapv CC_HAS_FTRAPV)                            # gcc
        check_cxx_compiler_flag(-fstack-protector-all CC_HAS_STACK_PROTECT)       # gcc
        if(CC_HAS_FTRAPV)
            x265_add_definitions(-ftrapv)
        endif()
        if(CC_HAS_CATCH_UNDEFINED)
            x265_add_definitions(-fsanitize=undefined-trap -fsanitize-undefined-trap-on-error)
        endif()
        if(CC_HAS_STACK_PROTECT)
            x265_add_definitions(-fstack-protector-all)
            if(MINGW)
                list(APPEND PLATFORM_LIBS ssp)
            endif()
        endif()
    endif(ENABLE_AGGRESSIVE_CHECKS)
    execute_process(COMMAND ${CMAKE_CXX_COMPILER} -dumpversion OUTPUT_VARIABLE CC_VERSION)
endif(GCC)

find_package(Nasm)
if(ARM OR CROSS_COMPILE_ARM OR ARM64 OR CROSS_COMPILE_ARM64)
    option(ENABLE_ASSEMBLY "Enable use of assembly coded primitives" ON)
    # Force ENABLE_ASSEMBLY to be OFF when all SIMD extensions are disabled.
    if (NOT ENABLE_NEON)
        set(ENABLE_ASSEMBLY OFF CACHE BOOL "" FORCE)
    endif()
elseif(NASM_FOUND AND X86)
    if (NASM_VERSION_STRING VERSION_LESS "2.13.0")
        message(STATUS "Nasm version ${NASM_VERSION_STRING} is too old. 2.13.0 or later required")
        option(ENABLE_ASSEMBLY "Enable use of assembly coded primitives" OFF)
    else()
        message(STATUS "Found Nasm ${NASM_VERSION_STRING} to build assembly primitives")
        option(ENABLE_ASSEMBLY "Enable use of assembly coded primitives" ON)
    endif()
else()
    option(ENABLE_ASSEMBLY "Enable use of assembly coded primitives" OFF)
endif()

if(ENABLE_ASSEMBLY)
   x265_add_definitions(-DENABLE_ASSEMBLY)
endif()

option(CHECKED_BUILD "Enable run-time sanity checks (debugging)" OFF)
if(CHECKED_BUILD)
    x265_add_definitions(-DCHECKED_BUILD=1)
endif()

# Build options
set(LIB_INSTALL_DIR lib CACHE STRING "Install location of libraries")
set(BIN_INSTALL_DIR bin CACHE STRING "Install location of executables")
set(EXTRA_LIB "" CACHE STRING "Extra libraries to link against")
set(EXTRA_LINK_FLAGS "" CACHE STRING "Extra link flags")
if(EXTRA_LINK_FLAGS)
    list(APPEND LINKER_OPTIONS ${EXTRA_LINK_FLAGS})
endif()
if(EXTRA_LIB)
    option(LINKED_8BIT  "8bit libx265 is being linked with this library" OFF)
    option(LINKED_10BIT "10bit libx265 is being linked with this library" OFF)
    option(LINKED_12BIT "12bit libx265 is being linked with this library" OFF)
endif(EXTRA_LIB)
mark_as_advanced(EXTRA_LIB EXTRA_LINK_FLAGS)

if(X64 OR ARM64 OR PPC64)
    # NOTE: We only officially support high-bit-depth compiles of x265
    # on 64bit architectures. Main10 plus large resolution plus slow
    # preset plus 32bit address space usually means malloc failure.  You
    # can disable this if(X64) check if you desparately need a 32bit
    # build with 10bit/12bit support, but this violates the "shrink wrap
    # license" so to speak.  If it breaks you get to keep both halves.
    # You will need to disable assembly manually.
    option(HIGH_BIT_DEPTH "Store pixel samples as 16bit values (Main10/Main12)" OFF)
endif(X64 OR ARM64 OR PPC64)
if(HIGH_BIT_DEPTH)
    option(MAIN12 "Support Main12 instead of Main10" OFF)
    if(MAIN12)
        x265_add_definitions(-DHIGH_BIT_DEPTH=1 -DX265_DEPTH=12)
    else()
        x265_add_definitions(-DHIGH_BIT_DEPTH=1 -DX265_DEPTH=10)
    endif()
else(HIGH_BIT_DEPTH)
    x265_add_definitions(-DHIGH_BIT_DEPTH=0 -DX265_DEPTH=8)
endif(HIGH_BIT_DEPTH)

if (ENABLE_HDR10_PLUS)
    x265_add_include_dir("${CMAKE_CURRENT_SOURCE_DIR}/dynamicHDR10")
    add_subdirectory(dynamicHDR10)
    x265_add_definitions(-DENABLE_HDR10_PLUS)
endif(ENABLE_HDR10_PLUS)

option(ENABLE_SVT_HEVC "Enable SVT HEVC Encoder" OFF)
if(ENABLE_SVT_HEVC)
    find_package(svthevc)
    if(SVTHEVC_FOUND)
        x265_add_definitions(-DSVT_HEVC)
        list(APPEND X265_INCLUDE_DIRS "${SVT_HEVC_INCLUDE_DIR}")
    endif(SVTHEVC_FOUND)
endif(ENABLE_SVT_HEVC)

# this option can only be used when linking multiple libx265 libraries
# together, and some alternate API access method is implemented.
option(EXPORT_C_API "Implement public C programming interface" ON)
mark_as_advanced(EXPORT_C_API)
if(EXPORT_C_API)
    set(X265_NS x265)
    x265_add_definitions(-DEXPORT_C_API=1)
elseif(HIGH_BIT_DEPTH)
    if(MAIN12)
        set(X265_NS x265_12bit)
    else()
        set(X265_NS x265_10bit)
    endif()
    x265_add_definitions(-DEXPORT_C_API=0)
else()
    set(X265_NS x265_8bit)
    x265_add_definitions(-DEXPORT_C_API=0)
endif()
x265_add_definitions(-DX265_NS=${X265_NS})

if(ARM64)
  if(HIGH_BIT_DEPTH)
    if(MAIN12)
      list(APPEND ASM_FLAGS -DHIGH_BIT_DEPTH=1 -DBIT_DEPTH=12 -DX265_NS=${X265_NS})
    else()
      list(APPEND ASM_FLAGS -DHIGH_BIT_DEPTH=1 -DBIT_DEPTH=10 -DX265_NS=${X265_NS})
    endif()
  else()
    list(APPEND ASM_FLAGS -DHIGH_BIT_DEPTH=0 -DBIT_DEPTH=8 -DX265_NS=${X265_NS})
  endif()
endif(ARM64)

option(WARNINGS_AS_ERRORS "Stop compiles on first warning" OFF)
if(WARNINGS_AS_ERRORS)
    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
        x265_add_definitions(-Werror)
        x265_add_definitions(-Wno-unused)
    elseif(MSVC)
        x265_add_definitions(/WX)
    endif()
endif(WARNINGS_AS_ERRORS)

if(WIN32)
    # Visual leak detector
    find_package(VLD QUIET)
    if(VLD_FOUND)
        x265_add_definitions(-DHAVE_VLD)
        list(APPEND X265_INCLUDE_DIRS ${VLD_INCLUDE_DIRS})
        list(APPEND PLATFORM_LIBS ${VLD_LIBRARIES})
        list(APPEND X265_LINK_DIRS ${VLD_LIBRARY_DIRS})
    endif()
    option(WINXP_SUPPORT "Make binaries compatible with Windows XP and Vista" OFF)
    if(WINXP_SUPPORT)
        # force use of workarounds for CONDITION_VARIABLE and atomic
        # intrinsics introduced after XP
        x265_add_definitions(-D_WIN32_WINNT=_WIN32_WINNT_WINXP -D_WIN32_WINNT_WIN7=0x0601)
    else(WINXP_SUPPORT)
        # default to targeting Windows 7 for the NUMA APIs
        x265_add_definitions(-D_WIN32_WINNT=_WIN32_WINNT_WIN7)
    endif(WINXP_SUPPORT)
endif()

if(POWER)
    # IBM Power8
    option(ENABLE_ALTIVEC "Enable ALTIVEC profiling instrumentation" ON)
    if(ENABLE_ALTIVEC)
        x265_add_definitions(-DHAVE_ALTIVEC=1 -maltivec -mabi=altivec)
        x265_add_definitions(-flax-vector-conversions -fpermissive)
    else()
        x265_add_definitions(-DHAVE_ALTIVEC=0)
    endif()

    option(CPU_POWER8 "Enable CPU POWER8 profiling instrumentation" ON)
    if(CPU_POWER8)
        x265_add_definitions(-mcpu=power8 -DX265_ARCH_POWER8=1)
    endif()
endif()

include(YuukiVersion) # determine X265_VERSION and X265_LATEST_TAG

# Collect include directories (Modern CMake: will be applied via target_include_directories)
x265_add_include_dir("${CMAKE_CURRENT_SOURCE_DIR}")
x265_add_include_dir("${CMAKE_CURRENT_SOURCE_DIR}/common")
x265_add_include_dir("${CMAKE_CURRENT_SOURCE_DIR}/encoder")
x265_add_include_dir("${PROJECT_BINARY_DIR}")

# Apply include directories at directory scope for OBJECT libraries (encoder, common)
# This is needed because target_include_directories on final target doesn't affect OBJECT libraries
include_directories(${X265_INCLUDE_DIRS})

option(ENABLE_PPA "Enable PPA profiling instrumentation" OFF)
if(ENABLE_PPA)
    x265_add_definitions(-DENABLE_PPA)
    list(APPEND PLATFORM_LIBS PPA)
    if(UNIX)
        list(APPEND PLATFORM_LIBS dl)
    endif(UNIX)
    add_subdirectory(profile/PPA)
endif(ENABLE_PPA)

option(ENABLE_VTUNE "Enable Vtune profiling instrumentation" OFF)
if(ENABLE_VTUNE)
    find_package(Vtune)
    if(VTUNE_FOUND)
        x265_add_definitions(-DENABLE_VTUNE)
        list(APPEND X265_INCLUDE_DIRS "${VTUNE_INCLUDE_DIR}")
        list(APPEND PLATFORM_LIBS vtune)
        list(APPEND X265_LINK_DIRS "${VTUNE_LIBRARY_DIR}")
        if(WIN32)
            list(APPEND PLATFORM_LIBS libittnotify.lib)
        else()
            list(APPEND PLATFORM_LIBS libittnotify.a dl)
        endif()
        add_subdirectory(profile/vtune)
    endif(VTUNE_FOUND)
endif(ENABLE_VTUNE)

option(DETAILED_CU_STATS "Enable internal profiling of encoder work" OFF)
if(DETAILED_CU_STATS)
    x265_add_definitions(-DDETAILED_CU_STATS)
endif(DETAILED_CU_STATS)

if(USE_MIMALLOC)
    find_package(mimalloc REQUIRED)
    x265_add_definitions(-DUSE_MIMALLOC)
    list(APPEND X265_INCLUDE_DIRS "${MIMALLOC_INCLUDE_DIR}")
    # Find the actual library file (handles versioned subdirectories like mimalloc-2.2)
    # First try: use mimalloc provided variables
    if(DEFINED MIMALLOC_LIBRARIES AND NOT MIMALLOC_LIBRARIES STREQUAL "")
        list(APPEND PLATFORM_LIBS ${MIMALLOC_LIBRARIES})
    else()
        # Second try: search in versioned subdirectories
        file(GLOB MIMALLOC_VERSIONED_DIR "${MIMALLOC_LIBRARY_DIR}/mimalloc-*")
        if(MIMALLOC_VERSIONED_DIR)
            # Use the first matching versioned directory
            list(GET MIMALLOC_VERSIONED_DIR 0 MIMALLOC_ACTUAL_DIR)
            find_library(MIMALLOC_LIBRARY_FILE
                NAMES mimalloc mimalloc-static
                PATHS ${MIMALLOC_ACTUAL_DIR}
                NO_DEFAULT_PATH
            )
        endif()
        # Fallback: search directly in library dir
        if(NOT MIMALLOC_LIBRARY_FILE)
            find_library(MIMALLOC_LIBRARY_FILE
                NAMES mimalloc mimalloc-static
                PATHS ${MIMALLOC_LIBRARY_DIR}
                NO_DEFAULT_PATH
            )
        endif()
        if(MIMALLOC_LIBRARY_FILE)
            list(APPEND PLATFORM_LIBS ${MIMALLOC_LIBRARY_FILE})
        else()
            message(FATAL_ERROR "Could not find mimalloc library in ${MIMALLOC_LIBRARY_DIR}")
        endif()
    endif()
endif()

cmake_policy(SET CMP0069 NEW)
if(USE_LTO)
    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()

option(ENABLE_ALPHA "Enable alpha encoding in x265" OFF)
if(ENABLE_ALPHA)
    x265_add_definitions(-DENABLE_ALPHA)
endif()

option(ENABLE_MULTIVIEW "Enable Multi-view encoding in HEVC" OFF)
if(ENABLE_MULTIVIEW)
    x265_add_definitions(-DENABLE_MULTIVIEW)
endif()

option(ENABLE_SCC_EXT "Enable screen content coding extension in HEVC" OFF)
if(ENABLE_SCC_EXT)
    x265_add_definitions(-DENABLE_SCC_EXT)
endif()

add_subdirectory(encoder)
add_subdirectory(common)

if((MSVC_IDE OR XCODE OR GCC) AND ENABLE_ASSEMBLY)
    # this is required because of this cmake bug
    # http://www.cmake.org/Bug/print_bug_page.php?bug_id=8170
    if(WIN32)
        set(SUFFIX obj)
    else()
        set(SUFFIX o)
    endif()

    if(ARM OR CROSS_COMPILE_ARM)
    # compile ARM arch asm files here
        enable_language(ASM)
        foreach(ASM ${ARM_ASMS})
			set(ASM_SRC ${CMAKE_CURRENT_SOURCE_DIR}/common/arm/${ASM})
            list(APPEND ASM_SRCS ${ASM_SRC})
            list(APPEND ASM_OBJS ${ASM}.${SUFFIX})
            add_custom_command(
                OUTPUT ${ASM}.${SUFFIX}
                COMMAND ${CMAKE_CXX_COMPILER}
                ARGS ${ARM_ARGS} -c ${ASM_SRC} -o ${ASM}.${SUFFIX}
                DEPENDS ${ASM_SRC})
        endforeach()
	elseif(ARM64 OR CROSS_COMPILE_ARM64)
    # compile ARM64 arch asm files here
        enable_language(ASM)
        foreach(ASM ${ARM_ASMS})
            set(ASM_SRC ${CMAKE_CURRENT_SOURCE_DIR}/common/aarch64/${ASM})
            list(APPEND ASM_SRCS ${ASM_SRC})
            list(APPEND ASM_OBJS ${ASM}.${SUFFIX})
            add_custom_command(
                OUTPUT ${ASM}.${SUFFIX}
                COMMAND ${CMAKE_CXX_COMPILER}
                ARGS ${ARM_ARGS} ${ASM_FLAGS} ${AARCH64_NEON_FLAG} -c ${ASM_SRC} -o ${ASM}.${SUFFIX}
                DEPENDS ${ASM_SRC})
        endforeach()
        if(CPU_HAS_NEON_DOTPROD)
            foreach(ASM ${ARM_ASMS_NEON_DOTPROD})
                set(ASM_SRC ${CMAKE_CURRENT_SOURCE_DIR}/common/aarch64/${ASM})
                list(APPEND ASM_SRCS ${ASM_SRC})
                list(APPEND ASM_OBJS ${ASM}.${SUFFIX})
                add_custom_command(
                    OUTPUT ${ASM}.${SUFFIX}
                    COMMAND ${CMAKE_CXX_COMPILER}
                    ARGS ${ARM_ARGS} ${ASM_FLAGS} ${AARCH64_NEON_DOTPROD_FLAG} -c ${ASM_SRC} -o ${ASM}.${SUFFIX}
                    DEPENDS ${ASM_SRC})
            endforeach()
        endif()
        if(CPU_HAS_SVE)
            foreach(ASM ${ARM_ASMS_SVE})
                set(ASM_SRC ${CMAKE_CURRENT_SOURCE_DIR}/common/aarch64/${ASM})
                list(APPEND ASM_SRCS ${ASM_SRC})
                list(APPEND ASM_OBJS ${ASM}.${SUFFIX})
                add_custom_command(
                    OUTPUT ${ASM}.${SUFFIX}
                    COMMAND ${CMAKE_CXX_COMPILER}
                    ARGS ${ARM_ARGS} ${ASM_FLAGS} ${AARCH64_SVE_FLAG} -c ${ASM_SRC} -o ${ASM}.${SUFFIX}
                    DEPENDS ${ASM_SRC})
            endforeach()
        endif()
        if(CPU_HAS_SVE2)
            foreach(ASM ${ARM_ASMS_SVE2})
                set(ASM_SRC ${CMAKE_CURRENT_SOURCE_DIR}/common/aarch64/${ASM})
                list(APPEND ASM_SRCS ${ASM_SRC})
                list(APPEND ASM_OBJS ${ASM}.${SUFFIX})
                add_custom_command(
                    OUTPUT ${ASM}.${SUFFIX}
                    COMMAND ${CMAKE_CXX_COMPILER}
                    ARGS ${ARM_ARGS} ${ASM_FLAGS} ${AARCH64_SVE2_FLAG} -c ${ASM_SRC} -o ${ASM}.${SUFFIX}
                    DEPENDS ${ASM_SRC})
            endforeach()
        endif()
    elseif(X86)
    # compile X86 arch asm files here
        foreach(ASM ${MSVC_ASMS})
            set(ASM_SRC ${CMAKE_CURRENT_SOURCE_DIR}/common/x86/${ASM})
            list(APPEND ASM_SRCS ${ASM_SRC})
            list(APPEND ASM_OBJS ${ASM}.${SUFFIX})
            add_custom_command(
                OUTPUT ${ASM}.${SUFFIX}
                COMMAND ${NASM_EXECUTABLE} ARGS ${NASM_FLAGS} ${ASM_SRC} -o ${ASM}.${SUFFIX}
                DEPENDS ${ASM_SRC})
        endforeach()
    endif()
endif()
source_group(ASM FILES ${ASM_SRCS})
if(ENABLE_HDR10_PLUS)
    add_library(x265-static STATIC $<TARGET_OBJECTS:encoder> $<TARGET_OBJECTS:common> $<TARGET_OBJECTS:dynamicHDR10> ${ASM_OBJS})
    add_library(hdr10plus-static STATIC $<TARGET_OBJECTS:dynamicHDR10>)
    set_target_properties(hdr10plus-static PROPERTIES OUTPUT_NAME hdr10plus)
else()
    add_library(x265-static STATIC $<TARGET_OBJECTS:encoder> $<TARGET_OBJECTS:common> ${ASM_OBJS})
endif()

# Apply collected compile definitions and options to x265-static (Modern CMake)
target_compile_definitions(x265-static PRIVATE ${X265_COMPILE_DEFINITIONS})
if(X265_COMPILE_OPTIONS)
    target_compile_options(x265-static PRIVATE ${X265_COMPILE_OPTIONS})
endif()
if(X265_INCLUDE_DIRS)
    target_include_directories(x265-static PRIVATE ${X265_INCLUDE_DIRS})
endif()
if(X265_LINK_DIRS)
    target_link_directories(x265-static PRIVATE ${X265_LINK_DIRS})
endif()

if(NOT MSVC)
    set_target_properties(x265-static PROPERTIES OUTPUT_NAME x265)
endif()
if(EXTRA_LIB)
    target_link_libraries(x265-static ${EXTRA_LIB})
endif()
if(ENABLE_LIBVMAF)
    target_link_libraries(x265-static ${VMAF})
endif()
if(SVTHEVC_FOUND)
    target_link_libraries(x265-static ${SVT_HEVC_LIBRARY})
endif()
install(TARGETS x265-static
    LIBRARY DESTINATION ${LIB_INSTALL_DIR}
    ARCHIVE DESTINATION ${LIB_INSTALL_DIR})

if(ENABLE_HDR10_PLUS)
    install(TARGETS hdr10plus-static
        LIBRARY DESTINATION ${LIB_INSTALL_DIR}
        ARCHIVE DESTINATION ${LIB_INSTALL_DIR})
endif()

if(SVTHEVC_FOUND)
    install(FILES "${SVT_HEVC_INCLUDE_DIR}/EbApi.h" DESTINATION include)
    install(FILES "${SVT_HEVC_INCLUDE_DIR}/EbErrorCodes.h" DESTINATION include)
    install(FILES "${SVT_HEVC_LIBRARY}" DESTINATION ${LIB_INSTALL_DIR})
endif()

install(FILES x265.h "${PROJECT_BINARY_DIR}/x265_config.h" DESTINATION include)
if((WIN32 AND ENABLE_CLI) OR (WIN32 AND ENABLE_SHARED))
    if(MSVC_IDE)
        if(ENABLE_CLI)
            install(FILES "${PROJECT_BINARY_DIR}/Debug/x265.pdb" DESTINATION ${BIN_INSTALL_DIR} CONFIGURATIONS Debug)
            install(FILES "${PROJECT_BINARY_DIR}/RelWithDebInfo/x265.pdb" DESTINATION ${BIN_INSTALL_DIR} CONFIGURATIONS RelWithDebInfo)
        endif()
        if(ENABLE_SHARED)
            install(FILES "${PROJECT_BINARY_DIR}/Debug/libx265.pdb" DESTINATION ${BIN_INSTALL_DIR} CONFIGURATIONS Debug OPTIONAL NAMELINK_ONLY)
            install(FILES "${PROJECT_BINARY_DIR}/RelWithDebInfo/libx265.pdb" DESTINATION ${BIN_INSTALL_DIR} CONFIGURATIONS RelWithDebInfo OPTIONAL NAMELINK_ONLY)
        endif()
    else()
        if(ENABLE_CLI)
            install(FILES "${PROJECT_BINARY_DIR}/x265.pdb" DESTINATION ${BIN_INSTALL_DIR} CONFIGURATIONS Debug)
            install(FILES "${PROJECT_BINARY_DIR}/x265.pdb" DESTINATION ${BIN_INSTALL_DIR} CONFIGURATIONS RelWithDebInfo)
        endif()
        if(ENABLE_SHARED)
            install(FILES "${PROJECT_BINARY_DIR}/libx265.pdb" DESTINATION ${BIN_INSTALL_DIR} CONFIGURATIONS Debug OPTIONAL NAMELINK_ONLY)
            install(FILES "${PROJECT_BINARY_DIR}/libx265.pdb" DESTINATION ${BIN_INSTALL_DIR} CONFIGURATIONS RelWithDebInfo OPTIONAL NAMELINK_ONLY)
        endif()
    endif()
endif()
option(ENABLE_UTF8 "Build UTF-8 binary" ON)
if(CMAKE_RC_COMPILER)
    # The resource compiler does not need CFLAGS or macro defines. It
    # often breaks them
    string(REPLACE "<FLAGS>" "" CMAKE_RC_COMPILE_OBJECT "${CMAKE_RC_COMPILE_OBJECT}")
    string(REPLACE "<DEFINES>" "" CMAKE_RC_COMPILE_OBJECT "${CMAKE_RC_COMPILE_OBJECT}")
    # convert X265_LATEST_TAG (ex: 0.7) and X265_TAG_DISTANCE (ex: 103) to
    # @X265_VERSION_MAJOR@,@X265_VERSION_MINOR@,@X265_BRANCH_ID@,@X265_TAG_DISTANCE@
    string(REGEX MATCHALL "([0-9]+)" VERSION_LIST "${X265_LATEST_TAG}")
    list(GET VERSION_LIST 0 X265_VERSION_MAJOR)
    list(GET VERSION_LIST 1 X265_VERSION_MINOR)
    set(X265_BRANCH_ID 0) # TODO: 0 - stable, 1 - default or other
    set(X265_RC_FILE "${CMAKE_CURRENT_BINARY_DIR}/x265.rc")
    set(X265LIB_RC_FILE "${CMAKE_CURRENT_BINARY_DIR}/libx265.rc")
    set(X265_RC_MANIFEST "${CMAKE_CURRENT_BINARY_DIR}/x265res.manifest")

    set(X265_FNAME "libx265.dll")
    set(CLI_MANIFEST "")
    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/x265.rc.in" "${X265LIB_RC_FILE}" @ONLY)

    set(X265_FNAME "265.exe")
    if(ENABLE_UTF8)
        set(CLI_MANIFEST "\n1 RT_MANIFEST \"x265res.manifest\"\n")
    endif()
    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/x265.rc.in" "${X265_RC_FILE}" @ONLY)

    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/x265res.manifest.in" "${X265_RC_MANIFEST}" @ONLY)
endif()

if(NOT (MSVC_IDE OR XCODE))
    add_custom_target(clean-generated COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_SOURCE_DIR}/cmake/clean-generated.cmake)
endif()
option(ENABLE_SHARED "Build shared library" ON)
if(ENABLE_SHARED)
    if(ENABLE_HDR10_PLUS)
        add_library(x265-shared SHARED "${PROJECT_BINARY_DIR}/x265.def" ${ASM_OBJS}
                    ${X265LIB_RC_FILE} $<TARGET_OBJECTS:encoder> $<TARGET_OBJECTS:common> $<TARGET_OBJECTS:dynamicHDR10>)
        add_library(hdr10plus-shared SHARED $<TARGET_OBJECTS:dynamicHDR10>)

        if(MSVC)
            set_target_properties(hdr10plus-shared PROPERTIES OUTPUT_NAME libhdr10plus)
        else()
            set_target_properties(hdr10plus-shared PROPERTIES OUTPUT_NAME hdr10plus)
        endif()
    else()
        add_library(x265-shared SHARED "${PROJECT_BINARY_DIR}/x265.def" ${ASM_OBJS}
                   ${X265LIB_RC_FILE} $<TARGET_OBJECTS:encoder> $<TARGET_OBJECTS:common>)
    endif()

    # Apply collected compile definitions and options to x265-shared (Modern CMake)
    target_compile_definitions(x265-shared PRIVATE ${X265_COMPILE_DEFINITIONS})
    if(X265_COMPILE_OPTIONS)
        target_compile_options(x265-shared PRIVATE ${X265_COMPILE_OPTIONS})
    endif()
    if(X265_INCLUDE_DIRS)
        target_include_directories(x265-shared PRIVATE ${X265_INCLUDE_DIRS})
    endif()
    if(X265_LINK_DIRS)
        target_link_directories(x265-shared PRIVATE ${X265_LINK_DIRS})
    endif()

    if(EXTRA_LIB)
        target_link_libraries(x265-shared ${EXTRA_LIB})
    endif()
    target_link_libraries(x265-shared ${PLATFORM_LIBS})
    if(SVTHEVC_FOUND)
        target_link_libraries(x265-shared ${SVT_HEVC_LIBRARY})
    endif(SVTHEVC_FOUND)
    if(MSVC)
        set_target_properties(x265-shared PROPERTIES OUTPUT_NAME libx265)
    else()
        set_target_properties(x265-shared PROPERTIES OUTPUT_NAME x265)
    endif()
    if(UNIX)
        set_target_properties(x265-shared PROPERTIES VERSION ${X265_BUILD})
        if(APPLE)
            set_target_properties(x265-shared PROPERTIES MACOSX_RPATH 1)
        elseif(CYGWIN)
            # Cygwin is not officially supported or tested. MinGW with msys is recommended.
        else()
            list(APPEND LINKER_OPTIONS "-Wl,-Bsymbolic,-znoexecstack")
        endif()
    endif()
    set_target_properties(x265-shared PROPERTIES SOVERSION ${X265_BUILD})
    if(X265_LATEST_TAG OR NOT GIT_FOUND)
        if(WINDOWS)
            set_target_properties(x265-shared PROPERTIES VERSION ${X265_LATEST_TAG})
        endif()
        # shared library is not installed if a tag is not found
        install(TARGETS x265-shared
                LIBRARY DESTINATION ${LIB_INSTALL_DIR}
                ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
                RUNTIME DESTINATION ${BIN_INSTALL_DIR})
    endif()
    if(ENABLE_HDR10_PLUS)
        install(TARGETS hdr10plus-shared
            LIBRARY DESTINATION ${LIB_INSTALL_DIR}
            ARCHIVE DESTINATION ${LIB_INSTALL_DIR})
    endif()
    if(LINKER_OPTIONS)
        # Modern CMake: use target_link_options instead of LINK_FLAGS property
        target_link_options(x265-shared PRIVATE ${LINKER_OPTIONS})
    endif()
endif()

if(X265_LATEST_TAG OR NOT GIT_FOUND)
    # convert lists of link libraries into -lstdc++ -lm etc..
    foreach(LIB ${CMAKE_CXX_IMPLICIT_LINK_LIBRARIES} ${PLATFORM_LIBS})
        if(IS_ABSOLUTE ${LIB} AND EXISTS ${LIB})
            list(APPEND PLIBLIST "${LIB}")
        else()
            list(APPEND PLIBLIST "-l${LIB}")
        endif()
    endforeach()
    if(PLIBLIST)
        # blacklist of libraries that should not be in Libs.private
        list(REMOVE_ITEM PLIBLIST "-lc" "-lpthread" "-lmingwex" "-lmingwthrd"
            "-lmingw32" "-lmoldname" "-lmsvcrt" "-ladvapi32" "-lshell32"
            "-luser32" "-lkernel32")
        string(REPLACE ";" " " PRIVATE_LIBS "${PLIBLIST}")
    else()
        set(PRIVATE_LIBS "")
    endif(PLIBLIST)

    # Produce a pkg-config file
    configure_file("x265.pc.in" "x265.pc" @ONLY)
    install(FILES       "${CMAKE_CURRENT_BINARY_DIR}/x265.pc"
            DESTINATION "${LIB_INSTALL_DIR}/pkgconfig")
endif()

configure_file("${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
               "${CMAKE_CURRENT_BINARY_DIR}/cmake/cmake_uninstall.cmake"
               IMMEDIATE @ONLY)
add_custom_target(uninstall
                  "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/cmake/cmake_uninstall.cmake")

# Main CLI application
set(ENABLE_CLI ON CACHE BOOL "Build standalone CLI application")

if(MSVC)
    set(CMAKE_EXE_LINKER_FLAGS "/MANIFEST:NO")
endif(MSVC)

# CLI-specific option here
option(ENABLE_LSMASH "Enable L-SMASH muxer" OFF)
if(ENABLE_LSMASH)
    x265_add_definitions(-DENABLE_LSMASH)
    list(APPEND PLATFORM_LIBS lsmash)
endif(ENABLE_LSMASH)

option(ENABLE_MKV "Enable Haali Matroska muxer" OFF)
if(ENABLE_MKV)
    x265_add_definitions(-DENABLE_MKV)
endif(ENABLE_MKV)

if(ENABLE_AVISYNTH)
    x265_add_definitions(-DENABLE_AVISYNTH)
endif(ENABLE_AVISYNTH)

if(ENABLE_VPYSYNTH)
    x265_add_definitions(-DENABLE_VPYSYNTH)
endif(ENABLE_VPYSYNTH)

option(ENABLE_LAVF "Enable LAVF decoder" OFF)
if(ENABLE_LAVF AND ENABLE_CLI)
    find_package(FF)
    x265_add_definitions(-DENABLE_LAVF)
endif()

option(ENABLE_STATIC_LAVF "Link to LAVF's private libs" ON)
if(ENABLE_STATIC_LAVF)
    set(FFMPEG_STATIC_LIBRARIES ${PC_LIBAVUTIL_STATIC_LDFLAGS}
                                ${PC_LIBAVFORMAT_STATIC_LDFLAGS}
                                ${PC_LIBAVCODEC_STATIC_LDFLAGS}
                                ${PC_LIBSWSCALE_STATIC_LDFLAGS})
endif()

option(ENABLE_ZIMG "Enable ZImg scaling libary" OFF)
if(ENABLE_ZIMG)
    x265_add_definitions(-DENABLE_ZIMG)
    list(APPEND PLATFORM_LIBS zimg)
endif(ENABLE_ZIMG)

if(ENABLE_CLI)
    file(GLOB InputFiles input/input.cpp input/yuv.cpp input/y4m.cpp input/*.h)
    file(GLOB OutputFiles output/output.cpp output/reconplay.cpp output/*.h
                          output/yuv.cpp output/y4m.cpp # recon
                          output/gop.cpp
                          output/raw.cpp)               # muxers
if(ENABLE_VPYSYNTH AND ENABLE_CLI)
    find_package(Vapoursynth)
endif()
    file(GLOB FilterFiles filters/*.cpp filters/*.h)
    source_group(filters FILES ${FilterFiles})
    source_group(input FILES ${InputFiles})
    source_group(output FILES ${OutputFiles})
    if(ENABLE_LAVF)
        if(ENABLE_STATIC_LAVF)
            list(APPEND PLATFORM_LIBS ${FFMPEG_STATIC_LIBRARIES})
        else()
            list(APPEND PLATFORM_LIBS ${FFMPEG_LIBRARIES})
        endif()
        list(APPEND InputFiles input/lavf.cpp)
    endif()
    if(ENABLE_AVISYNTH)
        list(APPEND InputFiles input/avs.cpp)
    endif()
    if(ENABLE_VPYSYNTH)
        list(APPEND InputFiles input/vpy.cpp)
    endif()
    if(ENABLE_LSMASH)
        list(APPEND OutputFiles output/mp4.cpp)
    endif()
    if(ENABLE_MKV)
        list(APPEND OutputFiles output/mkv.cpp output/matroska_ebml.cpp)
    endif()

    check_include_files(getopt.h HAVE_GETOPT_H)
    if(NOT HAVE_GETOPT_H)
        if(MSVC)
            set_source_files_properties(compat/getopt/getopt.c PROPERTIES COMPILE_FLAGS "/wd4100 /wd4131 -DHAVE_STRING_H=1")
        endif(MSVC)
        list(APPEND X265_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/compat/getopt")
        set(GETOPT compat/getopt/getopt.c compat/getopt/getopt.h)
    endif(NOT HAVE_GETOPT_H)
    if(WIN32)
        set(ExportDefs "${PROJECT_BINARY_DIR}/x265.def")
    endif(WIN32)
    if(XCODE)
        # Xcode seems unable to link the CLI with libs, so link as one targget
        if(ENABLE_HDR10_PLUS)
        add_executable(cli ../COPYING ${InputFiles} ${OutputFiles} ${FilterFiles} ${GETOPT}
                        x265.cpp x265.h x265cli.cpp x265cli.h abrEncApp.cpp abrEncApp.h
                        $<TARGET_OBJECTS:encoder> $<TARGET_OBJECTS:common> $<TARGET_OBJECTS:dynamicHDR10> ${ASM_OBJS})
        else()
            add_executable(cli ../COPYING ${InputFiles} ${OutputFiles} ${FilterFiles} ${GETOPT}
                        x265.cpp x265.h x265cli.cpp x265cli.h abrEncApp.cpp abrEncApp.h
                        $<TARGET_OBJECTS:encoder> $<TARGET_OBJECTS:common> ${ASM_OBJS})
        endif()
    else()
        add_executable(cli ../COPYING ${InputFiles} ${OutputFiles} ${FilterFiles} ${GETOPT} ${X265_RC_FILE}
                       ${ExportDefs} x265.cpp x265.h x265cli.cpp x265cli.h abrEncApp.cpp abrEncApp.h)
        if(WIN32 OR NOT ENABLE_SHARED OR INTEL_CXX)
            # The CLI cannot link to the shared library on Windows, it
            # requires internal APIs not exported from the DLL
            target_link_libraries(cli x265-static ${PLATFORM_LIBS})
        else()
            target_link_libraries(cli x265-shared ${PLATFORM_LIBS})
        endif()
    endif()

    # Apply collected compile definitions and options to cli (Modern CMake)
    target_compile_definitions(cli PRIVATE ${X265_COMPILE_DEFINITIONS})
    if(X265_COMPILE_OPTIONS)
        target_compile_options(cli PRIVATE ${X265_COMPILE_OPTIONS})
    endif()
    if(X265_INCLUDE_DIRS)
        target_include_directories(cli PRIVATE ${X265_INCLUDE_DIRS})
    endif()
    if(X265_LINK_DIRS)
        target_link_directories(cli PRIVATE ${X265_LINK_DIRS})
    endif()

    set_target_properties(cli PROPERTIES OUTPUT_NAME x265)
    if(LINKER_OPTIONS)
        # Modern CMake: use target_link_options instead of LINK_FLAGS property
        target_link_options(cli PRIVATE ${LINKER_OPTIONS})
    endif()

    install(TARGETS cli DESTINATION ${BIN_INSTALL_DIR})
endif(ENABLE_CLI)

if(ENABLE_ASSEMBLY AND NOT XCODE)
    option(ENABLE_TESTS "Enable Unit Tests" OFF)
    if(ENABLE_TESTS)
        add_subdirectory(test)
    endif()
endif()

get_directory_property(hasParent PARENT_DIRECTORY)
if(hasParent)
    if(PLATFORM_LIBS)
        LIST(REMOVE_DUPLICATES PLATFORM_LIBS)
        set(PLATFORM_LIBS ${PLATFORM_LIBS} PARENT_SCOPE)
    endif(PLATFORM_LIBS)
endif(hasParent)
